--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,13 +1,12 @@
 html {
   --button-padding: 0.4rem 0.6rem;
-  --button-background: hsl(0, 0%, 40%);
+  --button-background: transparent;
   --button-font-size: clamp(1.2rem, 1.4rem, 1.6rem);
-  --button-line-height: normal;
   --button-radius: 0.25rem;
   --button-clr-text: var(--clr-text-light);
   --button-border-clr: var(--button-background);
   --button-border: 2px solid transparent;
-  --button-weight: var(--ff-medium);
+  --button-weight: var(--fw-medium);
 }
 
 button {
@@ -17,12 +16,17 @@ button {
   cursor: pointer;
   margin: 0;
   padding: 0;
+  color: var(--clr-text);
+  fill: var(--clr-text);
+}
+
+.button svg {
+  color: var(--button-clr-text);
 }
 
 .button {
   position: relative;
   font-size: var(--button-font-size);
-  line-height: var(--button-line-height);
   font-weight: var(--button-weight);
   display: inline-flex;
   align-items: center;
@@ -44,8 +48,8 @@ button {
 }
 
 .button:hover {
-  --button-background: hsl(0, 0%, 30%);
-  --button-border-clr: hsl(0, 0%, 30%);
+  --button-background: hsl(0, 0%, 0% / 0.1);
+  /* --button-border-clr: hsl(0, 0%, 0% / 0.1); */
 }
 
 .button.block {
