--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -20,10 +20,12 @@
 }
 
 .card-header {
-  padding: 1rem 1.2rem;
+  padding: var(--space-4);
   color: var(--clr-text);
-  font-size: var(--fs-large);
+  font-size: var(--fs-regular);
   font-weight: 300;
+
+  height: auto;
   box-shadow: 0 -0.2rem 0rem inset var(--shadow);
   display: flex;
   flex-wrap: wrap;
@@ -32,21 +34,12 @@
   justify-content: space-between;
 }
 
-.card-header .card-title {
-  font-size: var(--fs-large);
-  font-weight: var(--ff-medium);
-  margin: 0;
-  padding: 0;
-  line-height: normal;
-  text-transform: none;
-}
-
 .card-content {
-  padding: 0.75rem;
+  padding: 1rem;
 }
 
 .card-actions {
-  padding: 0.75rem 0rem;
+  padding: 1rem 0rem;
   display: flex;
   justify-items: center;
   align-items: center;
