--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,10 +1,11 @@
 .input,
 .textarea {
   position: relative;
-  display: flex;
+  display: inline-flex;
   border-radius: 0.25rem;
   padding: 0.75rem 1rem;
-  width: clamp(100px, 100%, 100vw);
+  /* width: clamp(120px, 150px, 200px); */
+  width: 100%;
   height: 100%;
   line-height: normal;
   background-color: var(--bg-input, --white);
@@ -21,64 +22,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-}
-
-/* remove all styles from input range */
-input[type="range"] {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 2.5rem;
-  background: linear-gradient(
-    /* from lightred to green */ to right,
-    rgba(255, 0, 0, 0.5) 0%,
-    rgba(255, 0, 0, 0.5) 25%,
-    rgba(255, 255, 0, 0.5) 25%,
-    rgba(255, 255, 0, 0.5) 50%,
-    rgba(0, 255, 0, 0.5) 50%,
-    rgba(0, 255, 0, 0.5) 75%,
-    rgba(0, 0, 255, 0.5) 75%,
-    rgba(0, 0, 255, 0.5) 100%
-  );
-  border-radius: 0.35rem;
-}
-
-/* remove all styles from input range */
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 12px;
-  height: 12px;
-  background: var(--light-accent);
-  border-color: transparent;
-}
-
-input[type="range"]::-moz-range-thumb {
-  width: 12px;
-  height: 12px;
-  background: var(--light-accent);
-  border-color: transparent;
-}
-
-input[type="range"]::-ms-thumb {
-  width: 12px;
-  height: 12px;
-  background: var(--light-accent);
-  border-color: transparent;
-}
-
-.range {
-  accent-color: var(--primary);
-}
-
-.range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 1.5rem;
-  height: 1.5rem;
-  border-radius: 50%;
-  background-color: var(--primary);
-  cursor: pointer;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
 
 input:disabled,
@@ -99,6 +42,7 @@ input:focus-within + .form-decoration {
 
 input::placeholder,
 textarea::placeholder {
+  font-size: var(--fs-small);
   color: var(--clr-placeholder);
 }
 
@@ -117,9 +61,8 @@ textarea::placeholder {
 }
 
 .input-container {
-  position: relative;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+  grid-template-rows: auto;
+  gap: 0.25rem;
 }
