--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -35,7 +35,7 @@
 .modal-header {
   display: flex;
   font-weight: var(--fw-semibold);
-  font-size: var(--fs-medium);
+  font-size: var(--fs-large);
   color: hsl(var(--black));
   justify-content: space-between;
   align-items: center;
@@ -43,7 +43,7 @@
 
 .modal-content {
   font-weight: var(--fw-regular);
-  font-size: var(--fs-regular);
+  font-size: var(--fs-medium);
   z-index: 2;
   padding: 1rem 2rem;
 }
