--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -7,7 +7,8 @@
 .collapse-container {
   display: flex;
   flex-direction: column;
-  padding: 1rem 1rem;
+  padding: 0.5rem;
+  margin: 0.25rem;
   width: 100%;
   border-radius: 1.6rem;
   user-select: none;
@@ -19,7 +20,6 @@
   justify-content: space-between;
   align-items: center;
   color: var(--clr-text);
-  font-size: var(--fs-regular);
   width: 100%;
   line-height: normal;
   font-weight: var(--fw-regular);
