--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -4,7 +4,6 @@
   display: inline-flex;
   border-radius: 0.25rem;
   padding: 0.75rem 1rem;
-  /* width: clamp(120px, 150px, 200px); */
   width: 100%;
   height: 100%;
   line-height: normal;
@@ -20,7 +19,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%;
   height: 100%;
 }
 
@@ -35,14 +33,15 @@ textarea:focus {
   outline: none;
 }
 
-input:focus-within + .form-decoration {
+input:focus-within + .form-decoration,
+textarea:focus-within + .form-decoration {
   opacity: 1;
   transform: scaleX(1);
 }
 
 input::placeholder,
 textarea::placeholder {
-  font-size: var(--fs-small);
+  /* font-size: var(--fs-small); */
   color: var(--clr-placeholder);
 }
 
@@ -52,7 +51,7 @@ textarea::placeholder {
   left: 0px;
   right: 0px;
   width: 100%;
-  height: clamp(2px, 2px, 2px);
+  height: 2px;
   background-color: hsl(var(--clr-accent));
   pointer-events: none;
   opacity: 0;
@@ -61,8 +60,18 @@ textarea::placeholder {
 }
 
 .input-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.input-container > * {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.form-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
-  grid-template-rows: auto;
-  gap: 0.25rem;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  grid-gap: 1rem;
 }
