--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,5 @@
 @import url("_variables.css");
+@import url("fonts.css");
 @import url("color-switcher.css");
 @import url("forms.css");
 @import url("layouts.css");
