--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,6 +9,7 @@
 @import url("card.css");
 @import url("level.css");
 @import url("modal.css");
+@import url("dropdown.css");
 @import url("typography.css");
 
 /*
