--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -7,13 +7,10 @@
 .dropdown .menu {
   display: none;
   position: absolute;
-  top: 1.5vw;
-  left: 0;
-  z-index: 5;
-  min-width: 9rem;
+  z-index: 2;
   border-radius: 0.5rem;
-  transform-origin: top;
-  transition: all 0.3s ease-in-out;
+  transform-origin: center;
+  transition: display 1s ease-in-out;
 }
 
 .dropdown .menu.open {
@@ -22,7 +19,6 @@
 
 .menu {
   overflow: hidden;
-
   position: relative;
   display: flex;
   flex-direction: column;
@@ -47,4 +43,13 @@
   background-color: hsl(var(--clr-accent));
   color: white;
   cursor: pointer;
+}
+
+/* position the .dropdown .menu on mobile */
+
+.dropdown .menu.mobile {
+  position: fixed;
+  width: fit-content;
+  right: clamp(0.5rem, 1vw, 1rem);
+  z-index: 1;
 }
