--- a/src/styles/color-switcher.css
+++ b/src/styles/color-switcher.css
@@ -7,7 +7,7 @@ html {
   --clr-crater-border: hsla(0, 0%, 0%, 0.1);
   --clr-sky-day: linear-gradient(to right, hsl(198, 78%, 86%), hsl(205, 85%, 90%));
   --clr-sky-night: linear-gradient(to right, hsl(230, 45%, 25%) 0%, hsl(245, 25%, 20%) 100%);
-  --border-container: hsla(200, 30%, 50%, 0.9);
+  --clr-border-container: hsla(200, 30%, 50%, 0.9);
   --toggle-size-x: calc(var(--header-height) * 1.35);
   --toggle-size-y: calc(var(--header-height) / 1.85);
   --star-size-1: 1px;
@@ -35,7 +35,7 @@ html {
   height: var(--toggle-size-y);
   background: var(--clr-sky-day);
   border-radius: 100rem;
-  box-shadow: 0 0 0 2px var(--border-container);
+  box-shadow: 0 0 0 2px var(--clr-border-container);
   transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
@@ -153,7 +153,7 @@ html {
 }
 
 input:checked + .toggle {
-  --border-container: hsl(220, 65%, 55%);
+  --clr-border-container: hsl(220, 65%, 55%);
 }
 
 input:checked + .toggle .stars {
