--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -3,14 +3,14 @@
   position: relative;
   overflow: hidden;
   display: inline-flex;
-  border-radius: 0.55rem;
+  border-radius: 6px;
   padding: 1.6rem 1.2rem;
   width: 100%;
   height: 100%;
   line-height: normal;
-  background-color: var(--bg-form, --white);
+  background: var(--bg-form, --white);
   outline: currentcolor none medium;
-  border: 0px none;
+  border: 2px solid transparent;
   resize: vertical;
   color: var(--clr-text);
   transition: all 0.1s ease 0s;
@@ -35,36 +35,16 @@ textarea:focus {
   outline: none;
 }
 
-input:focus-within + .form-decoration,
-textarea:focus-within + .form-decoration {
-  opacity: 1;
-  transform: scaleX(1);
-}
-
-input:focus-within {
-  background-color: var(--clr-accent-hover);
+input:focus-within,
+input:focus,
+textarea:focus-within {
+  border: 2px solid var(--clr-form-focus);
 }
 
 input::placeholder,
 textarea::placeholder {
   font-size: 1.3rem;
   color: var(--clr-placeholder);
-}
-
-.form-decoration {
-  position: absolute;
-  border-bottom-right-radius: 100rem;
-  border-bottom-left-radius: 100rem;
-  left: 0px;
-  bottom: 0px;
-  right: 0px;
-  width: calc(100% - 1px);
-  height: 4px;
-  background-color: var(--clr-accent);
-  pointer-events: none;
-  opacity: 0;
-  transform: scaleX(0.5);
-  transition: all 0.2s ease 0s;
 }
 
 .input-container {
