--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -25,7 +25,7 @@
   font-size: var(--fs-regular);
   font-weight: var(--fw-light);
   height: auto;
-  box-shadow: 0 -0.2rem 0rem inset var(--shadow);
+  box-shadow: 0 -0.2rem 0rem inset var(--clr-border);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
