--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -15,7 +15,8 @@
   padding: 0.5rem;
   margin: 0.25rem;
   width: 100%;
-  border-radius: 1.6rem;
+  /* border-radius: 1.6rem; */
+  border-radius: var(--border-radius);
   user-select: none;
 }
 
