--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -8,9 +8,8 @@
   display: none;
   position: absolute;
   z-index: 2;
+  overflow: hidden;
   right: 0;
-  transform-origin: top;
-  transition: display 1s ease-in-out;
 }
 
 .dropdown .menu.open {
@@ -24,16 +23,17 @@
   flex-direction: column;
   border-radius: var(--border-radius);
   flex-wrap: wrap;
-  box-shadow: 0 0 0.4rem hsl(var(--shadow));
-  background-color: white;
+  box-shadow: 0 0 0.5rem 0.15rem var(--shadow);
 }
 
 .menu-item {
   position: relative;
   display: flex;
   align-items: center;
+  background-color: white;
+
   justify-content: space-between;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 2.25rem;
   z-index: 2;
   color: var(--clr-text-dark);
   transition: all 0.3s ease-in-out;
